Ver.1.2.0:
+ [all] added icons
+ [dataengine] added support of netctl-auto
+ [gui] added suppoort of macvlan
+ [gui] added ability to remove profile
+ [gui] added support of hidden wifi network
+ [gui] added contextual menu to tables
+ [gui] added actions menu
+ [gui] added clear() function to profileTab
+ [gui] added support of netctl-auto
+ [lib] detached backend from frontend
+ [plasmoid] added support of netctl-auto
+ [plasmoid] added dataengine configuration
* [all] small changes in the project architecture
* [gui] more debug information
* [gui] changed lineEdit_profile to comboBox
* [gui] refactoring of configuration interface
* [plasmoid] edited configuration interface

Ver.1.1.0 (netctl-1.7 update):
+ [gui] added frequency
+ [plasmoid] added menu title
* [dataengine] changed definition if profile is enabled
* [gui] changed definition if profile is enabled

Ver.1.0.6:
* [gui] fix error checking

Ver.1.0.5:
+ [plasmoid] added "Start WiFi menu" function
* [plasmoid] refactoring
* [plasmoid] edited icon

Ver.1.0.4:
+ [gui] added Qt5 gui (by default)
+ [plasmoid] added notifications
* [plasmoid] fix run command with sudo from plasmoid

Ver.1.0.3:
+ [plasmoid] edited russian translation
* [all] refactoring

Ver.1.0.2:
* [plasmoid] fix layout margins

Ver.1.0.1:
- [all] removed scripts

Ver.1.0:
First release